# aihelper

./: .env.example  .gitignore  README.md  dev.bat  pyproject.toml
app/: chain.py  rag.py  server.py
frontend/: index.html  main.js
local_docs/: test.md
